Added in the hero layout

--- a/content/pages/Example-about-us.mdx
+++ b/content/pages/Example-about-us.mdx
@@ -13,14 +13,10 @@ blocks:
       - linkName: Contact
       - linkName: Donate
     _template: header
-  - slides:
-      - backgroundImage: /home/Juniorboard.jpg
-        slideTitle: ''
-        slideContent: ''
-        darken: false
-        animate: false
-        actionButton: ''
-    _template: carousel
+  - heroBackgroundImage:
+      src: /home/Juniorboard.jpg
+      alt: background images
+    _template: hero
   - titleImageGridHeader:
       titleImageGridHeaderRich: |
         # Our Founding Story & History
