--- a/content/pages/about-us.mdx
+++ b/content/pages/about-us.mdx
@@ -41,7 +41,7 @@ blocks:
   - richTextLeft: >
       # <ColoredText text="SAFE HELP IS ALWAYS InReach" color="Ally Green"
       />![](/home/Homepage.jpg)
-    richTextRight: "## Jamie Sargo\n\nJamie  co-founded InReach (fka AsylumConnect) during his senior year at the  University of Pennsylvania. At Penn, a classmate shared his personal  experience struggling to find safe resources during the U.S. asylum  process despite access to technology. As a trans man who grew up in a  conservative environment, the feeling of not being able to live  authentically and lacking easily accessible information on how to find  affirming support deeply resonated with Jamie. So,  during their senior year, the two friends co-founded AsylumConnect, a  501(c)(3) nonprofit organization started as the world’s first technology  platform for LGBTQ+ asylum seekers, to fill the critical resource  information gap facing the diverse LGBTQ+ community. The organization is  founded on the belief that every LGBTQ+ person deserves the safety and freedom to live authentically.\_\n\n\nIn May 2022, AsylumConnect officially became <ColoredText text=\"InReach\" color=\"Ally Green\" />. Since  launching its app in 2016, the organization has seen the platform be  used by a wide variety of LGBTQ+ people, in addition to those seeking  asylum. The organization rebranded to InReach to better communicate and  reflect the value of its free technology to a diverse LGBTQ+ user base.\n\nToday, InReach is dedicated to listing verified services for a broad spectrum of LGBTQ+ people including asylum seekers, refugees, and other immigrants, BIPOC communities, transgender and gender non-conforming (TGNC) people, youth, caregivers, and more.\n"
+    richTextRight: "## Jamie Sargo\n\nJamie  co-founded InReach (fka AsylumConnect) during his senior year at the  University of Pennsylvania. At Penn, a classmate shared his personal  experience struggling to find safe resources during the U.S. asylum  process despite access to technology. As a trans man who grew up in a  conservative environment, the feeling of not being able to live  authentically and lacking easily accessible information on how to find  affirming support deeply resonated with Jamie. So,  during their senior year, the two friends co-founded AsylumConnect, a  501(c)(3) nonprofit organization started as the world’s first technology  platform for LGBTQ+ asylum seekers, to fill the critical resource  information gap facing the diverse LGBTQ+ community. The organization is  founded on the belief that every LGBTQ+ person deserves the safety and freedom to live authentically.\_\n\nIn May 2022, AsylumConnect officially became <ColoredText text=\"InReach\" color=\"Ally Green\" />. Since  launching its app in 2016, the organization has seen the platform be  used by a wide variety of LGBTQ+ people, in addition to those seeking  asylum. The organization rebranded to InReach to better communicate and  reflect the value of its free technology to a diverse LGBTQ+ user base.\n\nToday, InReach is dedicated to listing verified services for a broad spectrum of LGBTQ+ people including asylum seekers, refugees, and other immigrants, BIPOC communities, transgender and gender non-conforming (TGNC) people, youth, caregivers, and more.\n"
     _template: twoColumn
   - heroBackgroundImage:
       src: /home/lgbtqtransflag.jpg
@@ -140,5 +140,5 @@ blocks:
         body: |
           <ActionButton actionText="Join" link="/" />
     _template: actions
+  - _template: footer
 ---
-
