feat: added title to md

--- a/content/pages/example-gallery.mdx
+++ b/content/pages/example-gallery.mdx
@@ -8,7 +8,7 @@ blocks:
       Board of Directors, Young Professionals Board and Advisory Council below.
     roles:
       - roleName: Staff
-        roleDescription: "Our staff members lead our operations and collaborate with our volunteers to advance our mission to increase access to safe, verified resources for the diverse LGBTQ+ community.\_\n\n*Join us! Learn more about our open staff, volunteer and intern positions [here](https://inreach.org/join-our-team/) (\\*all positions remote).*\n"
+        roleDescription: "# Staff\n\nOur staff members lead our operations and collaborate with our volunteers to advance our mission to increase access to safe, verified resources for the diverse LGBTQ+ community.\_\n\n*Join us! Learn more about our open staff, volunteer and intern positions [here](https://inreach.org/join-our-team/) (\\*all positions remote).*\n"
         employees:
           - image: /people/JSgarro.jpg
             fullName: Jamie Sgarro
@@ -62,3 +62,4 @@ blocks:
         roleDescription: "Our interns join us for the summer or a semester to develop their skills while helping to advance our mission to increase access to safe, verified resources for the diverse LGBTQ+ community.\n\nInterested in interning with us? Click\_[here](https://inreach.org/join-our-team/)\_to view our available internship positions.\n"
     _template: teamGallery
 ---
+
