feat: rich text position

--- a/content/pages/example-rich-text.mdx
+++ b/content/pages/example-rich-text.mdx
@@ -4,5 +4,9 @@ blocks:
   - richTextContent: >
       Words Words Words <ColoredText color="Ally Green" text="Green stuff" />
       more words!
+
+
+      <ActionButton text="Help" link="Help" />
+    position: Left
     _template: richText
 ---
