Fixed image names

--- a/content/pages/marketing-materials.mdx
+++ b/content/pages/marketing-materials.mdx
@@ -27,11 +27,11 @@ blocks:
       - linkName: Contact
     _template: header
   - heroBackgroundImage:
-      src: /marketing-materials/Corporate partners.jpg
+      src: /marketing-materials/CorporatePartners.jpg
       alt: Banner
     heroHeaderText:
       text: |
-        # Marketing Materials
+        # <ColoredText text="Marketing Materials" color="White" />
       darkenBackground: true
       position: Left
     _template: hero
@@ -336,3 +336,4 @@ blocks:
     _template: richText
   - _template: footer
 ---
+
