Added Header, Fixed address to lowercase,

--- a/content/pages/our-supporters.mdx
+++ b/content/pages/our-supporters.mdx
@@ -1,5 +1,5 @@
 ---
-title: Example Our Supporters
+title: Our Supporters
 blocks:
   - logo:
       src: /inreach-logos/InReach_Logo_Color_RGB.svg
@@ -47,6 +47,7 @@ blocks:
     heroHeaderText:
       text: |
         # <ColoredText text="OUR SUPPORTERS" color="White" />
+      position: Left
     _template: hero
   - richTextContent: >
       # <ColoredText text="WE'D LIKE TO GIVE SPECIAL THANKS TO THE FOLLOWING
